--- a/styles/breakpoints/bases/_base_main.scss
+++ b/styles/breakpoints/bases/_base_main.scss
@@ -1,6 +1,7 @@
 /* main section */
 .ml-main {
-  height: 95vh;
+  // height: 95vh;
+  height: 100vh;
   margin-bottom: $baseMlMainMargin;
   color: $baseTextColor;
 
